more DISC cleanup

--- a/Tex/src-DISC/evaluation2.tex
+++ b/Tex/src-DISC/evaluation2.tex
@@ -25,7 +25,6 @@ workload consisting of insert and delete operations ($50\%$ each), and a
 \emph{mixed workload} with $50\%$ lookups, $25\%$ inserts, and $25\%$
 deletes.
 
-
 \paragraph{Platform} All implementations are in Java. We ran the experiments on a dedicated machine with
 four Intel Xeon E5-4650 processors, each with $8$ cores, for a total of $32$ threads
 (with hyper-threading disabled).
@@ -46,8 +45,9 @@ data structures. The resulting algorithms are denoted \domTree and \domTreap.
 Then, we manually apply our lock-removal transformation to the reference
 implementations by following the algorithm line-by-line (requiring no understading of the base code)
 to get our semi-optimistic versions of the code, which we call
-\autoTree and \autoTreap, respectively. 
-Finally, we apply the optimization described in Section~\ref{sssec:alg-normal}, which eliminates explicit tracking of the \emph{lockedSet} and instead locks 
+\autoTree and \autoTreap, respectively. Note that this solution does not track the  \emph{lockedSet} for read-only operations.
+Finally, we apply the optimization described in Section~\ref{sssec:alg-normal}, which eliminates explicit tracking of the \emph{lockedSet} in update operations,
+and instead locks 
 all objects the thread holds a pointer to in the validation phase; this optimization is applicable since our parallel implementation is synthesized using
 domination locking. The resulting algorithms are denoted \optAutoTree and \optAutoTreap.   
 
@@ -85,22 +85,32 @@ omitted these results to avoid obscuring the presentation.
 \paragraph{Results}
 Figures~\ref{evaluation:results:unbalanced} and~\ref{evaluation:results:balanced}
 show the throughput of unbalanced and balanced data structures, resp. We see that our semi-optimistic
-solution is far superior to the fully-pessimistic automated approach; it successfully overcomes the bottlenecks associated with lock contention
+solution, both optimized and unoptimized, 
+ is far superior to the fully-pessimistic automated approach; it successfully overcomes the bottlenecks associated with lock contention
 in  \domTree and \domTreap. 
 
 Our approach  also outperforms STM by 2x to 3x.
 The additional overhead of STM most likely stems from two reasons: deferring writes to commit time, and 
 using a global clock to ensure a consistent view of the read set. The latter is done in order to satisfy opacity~\cite{GuerraouiK2008}, 
 which we avoid by ``sandboxing''.
+\Idit{Can we say the following sentence?} In our experiments, the code \emph{never} incurred a spurious exception or timeout due to
+inconsistent reads, and so the sandboxing was not associated with a performance penalty. 
 
 %might be due to the tradeoff between validation overhead and no internal consistency.
 %To ensure opacity~\cite{GuerraouiK2008}, each time an object is read in STM, the transaction checks that the version of the lock protecting the object is valid. 
 %Our algorithms read the version instead of locking the object which happens typically once during the operation.
 %This is where sandboxing pays off -- we allow operations to observe inconsistent views and hence have improved performance.
 
+Our solution comes close to custom-tailored implementations, and the optimized version is even superior to some of them.
+The throughput of our read-only operations is \Idit{how much?} lower than that achieved by the best-in-class. 
+By profiling the code, we learned that the bulk of this overhead stems from the need to track all read objects,
+which is inherent to our transformation.
+This is in contrast with the hand-crafted implementations, which have small overhead on reads that complete without any retries. 
+In  workloads that include update operations, our solution is  \Idit{how much?} slower.
+\Idit{Can we say that this only stems from tracking read and locked sets, because we got very few restarts? Can we say what percentage of restarts was?}
 
-%In many scenarios, 
-Our solution comes close to custom-tailored implementations.
+
+\Xomit{
 The results for the read-only workload show the main overhead
 of our approach. By profiling the code, we learned
 that the bulk of this overhead stems from the need to track all read objects,
@@ -116,6 +126,7 @@ In other words, the transformed code deals well with update contention.
 This might be due to the fact that once
 an update phase begins, the operation is not delayed due to concurrent
 read-only operations.
+}
 
 %% Eshcar: discuss small trees? the results are not the same
 %We also experimented with smaller trees ($[0,2\cdot10^4]$) to test different contention levels (the results appear in Appendix~\ref{sec:appendix:results}).
