fixing numbers according to the data

--- a/Tex/src-DISC/document.tex
+++ b/Tex/src-DISC/document.tex
@@ -72,7 +72,7 @@ hand-crafting concurrent data structures.
 
 \bigskip\bigskip
 \noindent
-Corresponding author: Maya Arbel maya.arbel@gmail.com\\
+Corresponding author: Maya Arbel mayaarl@cs.technion.ac.il\\
 \noindent
 {\bf
 This is a submission to the regular track.\\
