--- a/Tex/src-DISC/plots/balanced3.tex
+++ b/Tex/src-DISC/plots/balanced3.tex
@@ -11,6 +11,8 @@
 {results/trees-i1000000-u100.log}; 
 \addplot [coralred,mark=asterisk] table [x={threads}, y={LockBasedFriendlyTreeMap}]
 {results/trees-i1000000-u100.log};
+\addplot [violet,mark=Mercedes star] table [x={threads}, y={Skiplist}]
+{results/trees-i1000000-u100.log};
 \addplot [magenta,mark=+] table [x={threads}, y={STMTreap}]
 {results/trees-i1000000-u100.log};
 \addplot [blues4,mark=x] table [x={threads}, y={DominationLockingTreap}]
@@ -28,6 +30,8 @@
 \addplot [darkspringgreen,mark=triangle] table [x={threads}, y={LockBasedStanfordTreeMap}]
 {results/trees-i1000000-u50.log}; 
 \addplot [coralred,mark=asterisk] table [x={threads}, y={LockBasedFriendlyTreeMap}]
+{results/trees-i1000000-u50.log};
+\addplot [violet,mark=Mercedes star] table [x={threads}, y={Skiplist}]
 {results/trees-i1000000-u50.log};
 \addplot [magenta,mark=+] table [x={threads}, y={STMTreap}]
 {results/trees-i1000000-u50.log};
@@ -47,6 +51,8 @@
 \addplot [darkspringgreen,mark=triangle] table [x={threads}, y={LockBasedStanfordTreeMap}]
 {results/trees-i1000000-u0.log}; 
 \addplot [coralred,mark=asterisk] table [x={threads}, y={LockBasedFriendlyTreeMap}]
+{results/trees-i1000000-u0.log};
+\addplot [violet,mark=Mercedes star] table [x={threads}, y={Skiplist}]
 {results/trees-i1000000-u0.log};
 \addplot [magenta,mark=+] table [x={threads}, y={STMTreap}]
 {results/trees-i1000000-u0.log};
