--- a/Tex/src-DISC-camera-ready/document.tex
+++ b/Tex/src-DISC-camera-ready/document.tex
@@ -13,6 +13,9 @@
 \input{plotsStyle}
 \input{macros}
 
+\newcommand{\op}{\emph{\textsc{op}}}
+\newcommand{\opt}{\textsc{opt}}
+
 
 \begin{document}
 
