--- a/Tex/src-DISC-camera-ready/introduction.tex
+++ b/Tex/src-DISC-camera-ready/introduction.tex
@@ -21,8 +21,9 @@ for example, the proofs of \cite{BraginskyP2012,EllenFRB2010} are $31$ and $20$ 
 respectively.
 The rationale behind dedicating so much effort to one data structure is that it is
 generic and can be used by many applications. Nevertheless,  systems often use data structures in unique ways
-that necessitate changing or extending their code (e.g.,~\cite{levelDB,jmonkey,OhadThesis,zyulkyarov2009atomic}), which limits the usability of custom-tailored
-implementations. Hence, the return-on-investment for such endeavors may be suboptimal.
+that necessitate changing or extending their code (e.g.,~\cite{levelDB,jmonkey,OhadThesis,zyulkyarov2009atomic}), in which cases custom-tailored
+implementations may not meet the requirements. 
+%Hence, the return-on-investment for such endeavors may be suboptimal.
 Here, we propose an approach to facilitate this labor-intensive process,
 making scalable synchronization more readily available.
 
