--- a/Tex/src-DISC-camera-ready/myRef.bib
+++ b/Tex/src-DISC-camera-ready/myRef.bib
@@ -1,3 +1,18 @@
+@article{DiceHKLM14,
+  author    = {Dave Dice and
+               Timothy L. Harris and
+               Alex Kogan and
+               Yossi Lev and
+               Mark Moir},
+  title     = {Hardware extensions to make lazy subscription safe},
+  journal   = {CoRR},
+  volume    = {abs/1407.6968},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1407.6968},
+  timestamp = {Fri, 01 Aug 2014 13:50:01 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DiceHKLM14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @inproceedings{DBLP:conf/eurosys/ShalevS06,
   author    = {Ori Shalev and
